tests/ui/variance/variance-object-types.stderr
error[E0208]: [o]
  --> $DIR/variance-object-types.rs:7:1
   |
LL | struct Foo<'a> {
   | ^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0208`.
